--- a/ysl_web_sub02.html
+++ b/ysl_web_sub02.html
@@ -17,7 +17,7 @@
     <!-- 헤더 -->
     <div class="hdrWrap">
         <div class="header">
-            <h1>saint laurent<a href="./ysl_web_main.html"></a></h1>
+            <h1>saint laurent<a href="/index.html"></a></h1>
             <ul class="nav">
                 <li>men<a href="./ysl_web_sub01.html"></a></li>
                 <li>women<a href="./ysl_web_sub02.html"></a></li>
