--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="hdrWrap">
         <div class="header">
             <div class="logo">
-                <h1>saint laurent<a href="/index.html"></a></h1>
+                <h1>saint laurent<a href="index.html"></a></h1>
             </div>
             <ul class="nav">
                 <li>men<a href="./ysl_web_sub01.html"></a></li>
