--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <p>파리 쿠튀르의 황태자에서 20세기 후반 패션의 왕 <br>
                                 여성에게 처음으로 정장 바지를 입힌, <br>
                                 시대적 차별을 무너뜨린 패션 디자이너 '이브 생 로랑'</p>
-                            <h5>이브 생로랑의 대한 역사와 잘자취를 더 알아보세요.<div class=""></div></h5>
+                            <h5>이브 생로랑의 대한 역사와 잘자취를 더 알아보세요.</h5>
                             <div class="btn">
                                 <i class="xi-log-out"></i>
                             </div>
