--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <p>파리 쿠튀르의 황태자에서 20세기 후반 패션의 왕 <br>
                                 여성에게 처음으로 정장 바지를 입힌, <br>
                                 시대적 차별을 무너뜨린 패션 디자이너 '이브 생 로랑'</p>
-                            <h5>이브 생로랑의 대한 역사와 잘자취를 더 알아보세요.</h5>
+                            <h5>이브 생로랑의 대한 역사와 발자취를 더 알아보세요.</h5>
                             <div class="btn">
                                 <i class="xi-log-out"></i>
                             </div>
@@ -141,7 +141,7 @@
                         <div class="image i2"></div>
                         <div class="texts">
                             <h3>saint laurent history</h3>
-                            <h5>입생로랑의 위대한 시작과 브랜드의 빛나는 <br> 가치를 알아보세요.</h5>
+                            <h5>입생로랑의 위대한 시작과 브랜드의<br>빛나는 가치를 알아보세요.</h5>
                             <div class="btn">
                                 <i class="xi-log-out"></i>
                             </div>
