--- a/ysl_web_sub01.html
+++ b/ysl_web_sub01.html
@@ -150,9 +150,9 @@
                 <p>Copyright © Saint Laurent
                 All Rights Reserved.</p>
                 <div class="sns">
-                    <i class="xi-facebook-official"></i>
-                    <i class="xi-instagram"></i>
-                    <i class="xi-twitter"></i>
+                    <i class="xi-facebook-official"><a href="https://ko-kr.facebook.com/ysl/"></a></i>
+                    <i class="xi-instagram"><a href=" https://www.instagram.com/ysl/"></a></i>
+                    <i class="xi-twitter"><a href="http://twitter.com/ysl"></a></i>
                 </div>
             </div>
             <div class="leftCorp">
