--- a/ysl_web_sub03.html
+++ b/ysl_web_sub03.html
@@ -136,7 +136,7 @@
                 <div class="video">
                     <video src="./video/videoplayback.mp4" muted autoplay></video>
                     <div class="btn">
-                        <i class="xi-play-circle-o"></i><label for="video"></label>
+                        <i class="xi-play-circle-o"></i>
                     </div>
                 </div>
                 <div class="texts">
